feat: use async/go to run query server and tendermint abci host separately